# AI-PyLib

./: .gitignore  README.md  pyproject.toml
src/: config.py
src/baloise_ai_pylib/: ai_service.py  helpers.py  openai_service.py
src/baloise_ai_pylib/assistants/: __init__.py  improver_recipient_feedback.py  language_evaluator_rules.py  language_evaluator_style.py  recipient_chain_of_thought.py  template_analyzer.py  template_evaluator.py
src/baloise_ai_pylib/console/: Spinner.py
src/baloise_ai_pylib/resources/: banner.txt
src/baloise_ai_pylib/resources/providers/: Bitbucket.py  __init__.py
