[project]
name = "baloise_ai_pylib"
version = "0.0.1"
description = "Baloise AI libraray"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/baloise/AI-PyLib"
Issues = "https://github.com/baloise/AI-PyLib/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "baloise_ai_pylib"
version = "0.0.1"
description = "Balsy Partner System"
license = "Apache 2.0"
authors = ["AI Circle <aicommunity@groups.baloise.com>"]